<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RepositoryDetail"
    xmlns:fresco="http://schemas.android.com/apk/res-auto">

    <com.facebook.drawee.view.SimpleDraweeView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="40dp"
        android:id="@+id/user_display_imageView"
        fresco:actualImageScaleType="centerCrop"
        fresco:roundAsCircle="true"
        fresco:roundingBorderWidth="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_display_imageView"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:text="@string/repo_title_placeholder"
        android:textColor="@android:color/black"
        android:maxLines="2"
        android:id="@+id/repo_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_below="@+id/repo_title"
        android:padding="5dp"
        android:fadeScrollbars="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/details_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repo_description_placeholder"
                android:id="@+id/repo_fullName"
                android:textStyle="normal"
                android:textColor="#2d2d2d"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_horizontal"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repo_description_placeholder"
                android:id="@+id/repo_full_description"
                android:textStyle="normal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repo_watchers_placeholder"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:drawableTop="@drawable/ic_repo_star"
                    android:id="@+id/repo_stars"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repo_watchers_placeholder"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:drawableTop="@drawable/ic_repo_watchers"
                    android:id="@+id/repo_watchers"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repo_watchers_placeholder"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:drawableTop="@drawable/ic_repo_big_fork"
                    android:id="@+id/repo_forks"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/item_background"
                android:padding="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repo_watchers_placeholder"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:drawableTop="@drawable/ic_repo_language"
                    android:id="@+id/repo_language"
                    android:layout_marginEnd="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repo_watchers_placeholder"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:drawableTop="@drawable/ic_repo_issues"
                    android:id="@+id/repo_open_issues"
                    android:layout_marginStart="20dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/go_to_github"
        android:text="@string/open_on_github"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_drawable"
        android:textStyle="bold"
        style="?android:attr/borderlessButtonStyle"/>

</RelativeLayout>